--- a/Dockerfile.tensorflow-cli
+++ b/Dockerfile.tensorflow-cli
@@ -7,13 +7,13 @@ USER root
 
 COPY apt-packages.txt .
 RUN apt-get update && \
-    xargs -a apt-packages.txt apt-get install -y && \
+    grep -vE '^\s*#|^\s*$' apt-packages.txt | xargs apt-get install -y && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --upgrade pip
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --ignore-install -r requirements.txt
 
 COPY src /workspace/src
 
