--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+default_language_version:
+  python: python3.11
+
 repos:
   - repo: https://github.com/psf/black
     rev: 25.1.0
@@ -9,13 +12,13 @@ repos:
     hooks:
       - id: mypy
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 7.0.0
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.2.0
     hooks:
       - id: flake8
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.5.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -29,4 +32,3 @@ repos:
         entry: make export-requirements
         language: system
         pass_filenames: false
-
