--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ pytest = "^8.3"
 jupyter = "^1.0"
 pre-commit = "^3.7"
 
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::FutureWarning"
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
