--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ filterwarnings = [
     "ignore::DeprecationWarning",
     "ignore::FutureWarning"
 ]
+addopts="--pdbcls=IPython.terminal.debugger:TerminalPdb"
 
 [build-system]
 requires = ["poetry-core"]
